Test-Commit für pages build

--- a/Skript.tex
+++ b/Skript.tex
@@ -273,7 +273,7 @@
         Seien $z, w\in\C$. Dann gilt $\Re\of{\conj{z}w} \leq \abs{z}\abs{w}$.
 
         \begin{proof}
-
+            \textit{(fehlt)}
         \end{proof}
     \end{satz}
 
